--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,7 @@
+# Git
+.git
+.gitignore
+
 # Python
 __pycache__/
 *.py[cod]
@@ -27,14 +31,6 @@ env/
 ENV/
 .venv/
 .env/
-.env
-
-# Environment variables
-.env
-.env.local
-.env.development
-.env.test
-.env.production
 
 # IDE
 .idea/
@@ -46,22 +42,19 @@ ENV/
 # Logs
 logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# FastAPI specific
+# Tests
 .pytest_cache/
 coverage/
 htmlcov/
 
+# Docker
+.dockerignore
+Dockerfile
+docker-compose*.yml
+
 # Jupyter Notebook
 .ipynb_checkpoints
-
-# Docker
-docker-compose.override.yml
-docker-compose.*.yml
-!docker-compose.yml
 
 # Media files
 uploads/
@@ -71,3 +64,10 @@ static/media/
 # Database
 *.sqlite3
 *.db
+
+# Environment variables (pero mantenemos .env.example)
+.env
+.env.local
+.env.development
+.env.test
+.env.production
