--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,13 @@ INATURALIST_API_TOKEN=your_api_token_here
 # Token JWT (alternativo)
 INATURALIST_JWT_TOKEN=your_jwt_token_here
 
+# Configuración de Supabase
+# URL de Supabase (ej: https://your-project-id.supabase.co)
+SUPABASE_URL=your_supabase_url_here
+
+# Clave de servicio de Supabase (service_role key, NO la anon key)
+# Esta clave tiene permisos elevados y solo debe usarse en el backend
+SUPABASE_SERVICE_KEY=your_supabase_service_key_here
+
 # Configuración de logging
 LOG_LEVEL=INFO
